[package]
name = "jito_leader_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.15.0"
solana-sdk = "1.15.0"
rust-base58 = "0.0.4"
bs58 = "0.4.0"
plotly = "0.8.3"
plotters = "0.3"
